# gpt

./: pyproject.toml
docs/: 00_MASTER_STRATEGY_AND_RESEARCH_PLAN.md  01_ARCHITECTURE_DECISION_RECORD.md
src/gpt_trader/domain/: __init__.py  audit.py  decision.py  edge.py  execution.py  market.py  regime.py  risk.py
src/gpt_trader/engines/: __init__.py  audit_engine.py  base.py  decision_engine.py  risk_engine.py
tests/: test_domain_contracts.py  test_risk_engine.py
